# ocaml_vcd

./: dune-project  ocaml_vcd.opam
data/: test.vcd
lib/: dune  lexer.ml  lexer.mli  parser.ml  parser.mli  sim.ml  sim.mli  util.ml  vcd.ml  vcd.mli
lib/internal/: lexer.ml  lexer.mli  parser.ml  parser.mli
test/: dune
